--- a/res/layout/fragment_play_vid.xml
+++ b/res/layout/fragment_play_vid.xml
@@ -6,18 +6,24 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.videotest.MainActivity$PlaceholderFragment" >
+    tools:context="com.videotest.PlayVidActivity$PlaceholderFragment" >
+
+    <VideoView
+        android:id="@+id/myvidview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="116dp" />
 
     <Button
         android:id="@+id/button1"
-        style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="117dp"
-        android:layout_marginTop="34dp"
-        android:onClick="sendMessage"
-        android:text="@string/send" />
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="40dp"
+        android:onClick="finish"
+        android:text="@string/done" />
 
 </RelativeLayout>
