--- a/res/layout/activity_play_vid.xml
+++ b/res/layout/activity_play_vid.xml
@@ -10,7 +10,7 @@
 
     <VideoView
         android:id="@+id/myvidview1"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
@@ -25,5 +25,6 @@
         android:layout_marginBottom="40dp"
         android:onClick="finish"
         android:text="@string/done" />
+
 
 </RelativeLayout>
